examples/good/07-ValueRefPass.tms
void functionA(int i) {
  i++;
  return;
}

void functionB(int @i) {
  i++;
  return;
}

void main() {
    
  int i = 1;
  functionA(i);
  printInt(i);
  functionB(i);
  printBool(i == 2);

  return;
}