examples/bad/04-BadPrintArgCount.tms
void main () {

  printInt(10, 20);
  
  return;
}